fixed overflow styling issue, caused scrolling issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,7 +48,12 @@
   --hover: var(--dark-hover);
 }
 
-html, body {
+html {
+  overscroll-behavior: none;
+  font-family: 'Inter', sans-serif;
+}
+
+body {
   overscroll-behavior: none;
   font-family: 'Inter', sans-serif;
   overflow-x: hidden;
